--- a/ggplot2.Rmd
+++ b/ggplot2.Rmd
@@ -1,9 +1,13 @@
 # ggplot2
 
 ## Essential grammar
-* Data
-* Aesthetics
-* Geometries
+* Data - dataset being plotted.
+* Aesthetics - scales onto which we map our data.
+* Geometries - The visual elements used for our data.
+* Facets - Plotting small multiples.
+* Statistics - Representations of our data to aid understanding.
+* Coordinates - The space on which the data will be plotted.
+* Themes - All non-data ink.
 
 ```{r}
 dbase <- c(4,5,6,4,2)
